@Jacksonized is used